# annotation_prioritizer

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  TODO.md  dev-diary.txt  handoff_variable_tracking.md  main.py  prototype_findings.md  pyproject.toml  pyrightconfig.json  pyrightconfig.precommit.json  test_prototype.py  test_shadowing_prototype.py
.claude/: settings.json
.claude/agents/: opus-agent.md  python-lint-fixer.md
.claude/commands/: edit-plan.md  find-duplicative-tests.md  make-issue.md  make-plan.md  make-pr.md  propose-plan.md  prototype.md  review-plan.md  test-quality.md  update-pr.md  update-project-status.md  work-on-plan.md
.claude/hooks/: block_dangerous_git.py  block_dev_diary.py  check_file_size.py  check_imports.py  check_module_name.py  validate_commit_msg.py
.devcontainer/: Dockerfile  config.fish  devcontainer.json  init-firewall.sh
.github/: dependabot.yml
.github/workflows/: claude-code-review.yml  claude.yml  pre-commit.yml
demo_files/: class_instantiation_demo.py  complex_cases.py  example_1.py  fully_annotated.py  mixed_annotations.py
docs/: project_status.md
docs/guides/: ast-stdlib-module-guide.ipynb  ast-stdlib-module-guide.md
docs/guides/ast-stdlib-module/: 1-ast-fundamentals.ipynb  2-ast-core-nodes.ipynb  3-ast-visitor-patterns.ipynb  4-ast-debugging-tools.ipynb  5-ast-best-practices.ipynb  6-ast-testing-techniques.ipynb  README.md  ast-node-types-cheatsheet.md
plans/completed/: class-detection-improvements-2025-09-16.md  class-instantiation-tracking-2025-09-24.md  initial_implementation_plan.md  qualified-name-newtype-2025-09-17.md  scope-aware-variable-tracking-2025-09-19.md  single-collector-position-aware-2025-09-26.md  test-helpers-refactoring-2025-09-12.md  unresolvable-call-reporting-2025-09-16.md
plans/discarded/: CLAUDE.md  scope-aware-variable-tracking-2025-09-13.md
plans/pending/: ast-parsing-refactor-2025-09-24.md  class-detection-improvements-2025-09-16.md  class-instantiation-tracking-2025-09-24.md  execution-context-forward-references-2025-09-30.md  import-resolution-phase1-2025-09-25.md  initial_implementation_plan.md  plan-2025-09-12.md  qualified-name-newtype-2025-09-17.md  scope-aware-variable-tracking-2024-01-19.md  scope-aware-variable-tracking-2025-09-13.md  scope-aware-variable-tracking-2025-09-16.md  scope-aware-variable-tracking-2025-09-19.md  single-collector-position-aware-2025-09-26.md  test-helpers-refactoring-2025-09-12.md  unresolvable-call-reporting-2025-09-16.md
plans/persistent/: original_idea.md  test_codebases.md
src/annotation_prioritizer/: analyzer.py  ast_arguments.py  call_counter.py  call_counter_prototype.py  class_discovery.py  cli.py  function_parser.py  import_registry.py  iteration.py  models.py  name_binding_collector.py  output.py  parser.py  position_index.py  scope_tracker.py  scoring.py  variable_registry.py
src/annotation_prioritizer/ast_visitors/: call_counter.py  class_discovery.py  function_parser.py  import_discovery.py  name_binding_collector.py  parse_ast.py  variable_discovery.py
tests/: CLAUDE.md  conftest.py
tests/helpers/: __init__.py  console.py  factories.py  function_parsing.py  temp_files.py
tests/integration/: test_call_counter.py  test_class_discovery.py  test_cli.py  test_end_to_end.py  test_function_parser.py  test_nested_class_self_resolution.py  test_shadowing_resolution.py
tests/unit/: test_analyzer.py  test_build_position_index.py  test_call_counter.py  test_class_discovery.py  test_class_instantiation.py  test_cli.py  test_function_parser.py  test_import_discovery.py  test_import_registry.py  test_models.py  test_name_binding_collector.py  test_output.py  test_parse_ast.py  test_parser.py  test_position_index.py  test_scope_tracker.py  test_scoring.py  test_unsupported.py  test_variable_discovery.py  test_variable_registry.py
