[project]
name = "annotation-prioritizer"
version = "0.1.0"
description = "Python type annotation priority analyzer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["rich>=13.0.0"]

[project.scripts]
annotation-prioritizer = "annotation_prioritizer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "coverage[toml]>=7.0.0",
    "pre-commit>=3.0.0",
]

[tool.ruff]
target-version = "py313"
line-length = 110

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D104",  # Missing docstring in public package
    "D203",  # 1 blank line required before class docstring (conflicts with D211)
    "D213",  # Multi-line docstring summary should start at the second line (conflicts with D212)
    "S101",  # Use of assert detected (needed for tests)
    "FBT003", # Boolean positional value in function call (needed for dataclass construction)
    "PLR2004", # Magic value used in comparison (acceptable for test constants)
    "COM812", # Trailing comma (conflicts with ruff formatter)
]

[tool.ruff.lint.per-file-ignores]
"src/annotation_prioritizer/parser.py" = ["N802"]  # Allow visit_* method names required by AST

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*", "*/__main__.py"]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
fail_under = 100
